// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDataTable should match snapshot with default style 1`] = `
<gbox-stub
  class="g-table-wrapper"
>
  <!---->
   
  <gbox-stub
    class="g-table"
  >
    <table>
      <colgroup>
        <!---->
         
        <col
          width="200px"
        />
        <col />
        <col />
      </colgroup>
       
      <thead>
         
        <tr>
          <!---->
           
          <th
            class=""
            style="min-width: 200px; max-width: 200px;"
          >
            
                Dessert
              
          </th>
          <th
            class=""
          >
            <sortable-stub
              name="protein"
              sortname="fat"
              sorttype="asc"
            >
              
                  Protein (g)
                
            </sortable-stub>
          </th>
          <th
            class=""
          >
            
                Iron (%)
              
          </th>
        </tr>
      </thead>
       
      <tbody>
          
        <tr
          class=""
        >
          <!---->
           
          <!---->
           
          <td
            class="g-bg-white"
          >
            <div>
              Frozen Yogurt
            </div>
          </td>
          <td
            class="g-bg-white"
          >
            <div>
              4
            </div>
          </td>
          <td
            class="g-bg-white"
          >
            <div>
              formatted-value: 1
            </div>
          </td>
        </tr>
            
        <tr
          class=""
        >
          <!---->
           
          <!---->
           
          <td
            class="g-bg-white"
            rowspan="2"
          >
            <div>
              Row Span
            </div>
          </td>
          <td
            class="g-bg-white"
            rowspan="2"
          >
            <div />
          </td>
          <td
            class="g-bg-white"
          >
            <div>
              formatted-value: 2
            </div>
          </td>
        </tr>
        <tr
          class=""
        >
          <!---->
           
          <!---->
           
          <!---->
          <!---->
          <td
            class="g-bg-white"
          >
            <div>
              formatted-value: 2
            </div>
          </td>
        </tr>
            
        <tr
          class=""
        >
          <!---->
           
          <!---->
           
          <td
            class="g-bg-white"
          >
            <div />
          </td>
          <td
            class="g-bg-white"
          >
            <div>
              4
            </div>
          </td>
          <td
            class="g-bg-white"
          >
            <div>
              formatted-value: 1
            </div>
          </td>
        </tr>
           
        <!---->
      </tbody>
    </table>
     
    <!---->
  </gbox-stub>
   
  <gpagination-stub
    class="g-table-pagination"
    pagelimits="[object Object],[object Object],[object Object]"
    pagesizetext="Adet"
    pagesizevisible="true"
    pagination="[object Object]"
  />
</gbox-stub>
`;

exports[`GDataTable should match snapshot with items is empty 1`] = `
<gbox-stub
  class="g-table-wrapper"
>
  <!---->
   
  <gbox-stub
    class="g-table"
  >
    <table>
      <colgroup>
        <!---->
         
        <col
          width="200px"
        />
        <col />
        <col />
      </colgroup>
       
      <thead>
         
        <tr>
          <!---->
           
          <th
            class=""
            style="min-width: 200px; max-width: 200px;"
          >
            
                Dessert
              
          </th>
          <th
            class=""
          >
            <sortable-stub
              name="protein"
              sortname="fat"
              sorttype="asc"
            >
              
                  Protein (g)
                
            </sortable-stub>
          </th>
          <th
            class=""
          >
            
                Iron (%)
              
          </th>
        </tr>
      </thead>
       
      <tbody>
         
        <tr>
          <td
            colspan="3"
          >
            <div
              class="not_found"
            >
              <gtext-stub
                color="main-grey-500"
                variant="body"
              >
                Kayıt Bulunamadı.
              </gtext-stub>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
     
    <!---->
  </gbox-stub>
   
  <gpagination-stub
    class="g-table-pagination"
    pagelimits="[object Object],[object Object],[object Object]"
    pagesizetext="Adet"
    pagesizevisible="true"
    pagination="[object Object]"
  />
</gbox-stub>
`;

exports[`GDataTable should render correctly with default props 1`] = `
<gbox-stub
  class="g-table-wrapper"
>
  <!---->
   
  <gbox-stub
    class="g-table"
  >
    <table>
      <colgroup>
        <!---->
         
      </colgroup>
       
      <thead>
         
        <tr>
          <!---->
           
        </tr>
      </thead>
       
      <tbody>
         
        <tr>
          <td
            colspan="0"
          >
            <div
              class="not_found"
            >
              <gtext-stub
                color="main-grey-500"
                variant="body"
              >
                Kayıt Bulunamadı.
              </gtext-stub>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
     
    <!---->
  </gbox-stub>
   
  <gpagination-stub
    class="g-table-pagination"
    pagelimits="[object Object],[object Object],[object Object]"
    pagesizetext="Adet"
    pagination="[object Object]"
  />
</gbox-stub>
`;
